--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,5 @@
     "name": "UNTRVLD.",
     "short_name": "UNTRLD",
     "display": "browser",
-    "orientation": "natural"
+    "orientation": "portrait"
 }
